update metadata Added archival cover. tag 0.1.0

--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: By-paths-in-Hebraic-bookland_70401
 _version: 0.1.0
+covers:
+- cover_type: archival
+  image_path: 70401-h/images/cover.jpg
 creator:
   author:
     agent_name: Abrahams, Israel
@@ -11,6 +14,8 @@ creator:
     wikipedia: https://en.wikipedia.org/wiki/Israel_Abrahams
 description: '"Originally written in 1913 for serial publication." Reprinted in part,
   from the London "Jewish world."'
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/70401#By-paths-in-Hebraic-bookland
 gutenberg_issued: '2023-03-29'
 identifiers:
   gutenberg: '70401'
